--- a/data/language/en-GB.txt
+++ b/data/language/en-GB.txt
@@ -4538,7 +4538,7 @@ STR_6228    :Scenario Options
 STR_6229    :{WINDOW_COLOUR_2}{STRINGID}: {STRINGID}
 STR_6230    :{STRINGID}: {MOVE_X}{185}{STRINGID}
 STR_6231    :{WINDOW_COLOUR_2}{STRINGID}: {MOVE_X}{185}{STRINGID}
-
+STR_6232    :Frozen
 
 #############
 # Scenarios #
