--- a/data/language/en-GB.txt
+++ b/data/language/en-GB.txt
@@ -4541,6 +4541,10 @@ STR_6231    :{WINDOW_COLOUR_2}{STRINGID}: {MOVE_X}{185}{STRINGID}
 STR_6232    :Frozen
 STR_6233    :Cut-away view
 STR_6234    :Highlight path issues
+STR_6235    :Server Information
+STR_6236    :Players
+STR_6237    :Groups
+STR_6238    :Multiplayer Options
 
 #############
 # Scenarios #
